--- a/css/main.css
+++ b/css/main.css
@@ -34,8 +34,6 @@ header {
 
 main {
     grid-row: 2;
-    display: flex;
-    flex-flow: row wrap;
 }
 
 footer {
